c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_initializers/static_nested_init_too_long.c
// Union initializers, including nested ones, must have exactly one element
union u {
    int a;
    long b;
};
struct s {
    int tag;
    union u contents;
};

struct s my_struct = {
    10,
    {1, 2}  // invalid - nested union initializer has two elements
};